# Mobile-Robots

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  lab1Consp  main.cpp
diagram/: .gitignore  CMakeLists.txt
diagram/app_test/: test.cpp
diagram/src/: CMakeLists.txt  diagfile.cpp  diagfile.h  diagram.cpp  diagram.h  main.cpp  test.cpp
diagram/store/: 1.txt  2.txt  2.xml  3.xml  bin1  bin2  final.xml  final2.xml  just1.txt  lol.xml  lol2.xml  smtxml.fakexml  writetest.xml
etc/: diagram.drawio
helloWorldTest/src/: .CMakeLists.txt.swp
libraries/tinyxml2-lib/: tinyxml2.h
matrix/src/: CMakeLists.txt  main.cpp  matrixr.cpp  matrixr.h  test.cpp
multimap/: CMakeLists.txt  multimap.h
multiset/: CMakeLists.txt  main.cpp  multiset.h  test.cpp
robots/: Ai_Deep.cpp  Ai_Deep.h  Command_Center.cpp  Command_Center.h  Display.cpp  Display.h  Energy_Consumer.cpp  Energy_Consumer.h  Envinronment_describer.h  Environment_describer.cpp  Environment_describer.h  Interest_Point.cpp  Interest_Point.h  Managing.cpp  Managing.h  Map_Object.cpp  Map_Object.h  Module.h  Moving_Describer.cpp  Moving_Describer.h  Observation_Center.cpp  Observation_Center.h  Obstacle.cpp  Obstacle.h  Power_Generator.cpp  Power_Generator.h  Robot_Commander.cpp  Robot_Commander.h  Robot_Scout.cpp  Robot_Scout.h  Sensor.cpp  Sensor.h  environment.cpp  interface.cpp  interface.h  robot.h
spiral/src/: CMakeLists.txt  aspiral.cpp  aspiral.h  hwl.cpp  input.cpp  input.h  main.cpp  test.cpp
static/: ceil_template.xcf
storage/: map1.xml  map2.xml  map3.xml  map31.xml  map4.xml  map41.xml  map5.xml  map6.xml
store/: easyMap.xml
tests/: mapDeadEnd.xml  mapStaticTest.xml  mapXMLtest.xml  test1.cpp
